package com.example.book_tracker.core.presentation.util

object TestTags {

    const val SIGN_IN_BUTTON = "SIGN_IN_BUTTON"
    const val IMAGE_BOOK_TAG = "BOOK_IMAGE"
    const val SNACKBAR_HOST = "SNACKBAR_HOST"
    const val BOTTOM_NAVIGATION_BAR = "BOTTOM_NAVIGATION_BAR"
    const val BOTTOM_NAVIGATION_ITEM = "BOTTOM_NAVIGATION_ITEM"
    const val BOOK_TRACKER_NAV_GRAPH = "BOOK_TRACKER_NAV_GRAPH"
    const val TOP_APP_BAR = "TOP_APP_BAR"
    const val ICON_BUTTON_EDIT = "ICON_BUTTON_EDIT"
    const val ICON_BUTTON_DETAIL = "ICON_BUTTON_DETAIL"
}